--- a/templates/dashboard_manage.html
+++ b/templates/dashboard_manage.html
@@ -193,7 +193,7 @@
                         <span class="text-sm md:text-base text-gray-700">
                             <i class="fas fa-chart-line text-indigo-400 mr-2"></i> Total Usage
                         </span>
-                        <span class="text-base md:text-lg font-bold text-indigo-600">{{ total_usage }}</span>
+                        <span class="text-base md:text-lg font-bold text-indigo-600">{{ total_usage|int }}</span>
                     </li>
                 </ul>
             </div>
