--- a/templates/dashboard_manage.html
+++ b/templates/dashboard_manage.html
@@ -286,7 +286,7 @@
                                     </div>
                                 </div>
                             </td>
-                            <td class="px-2 md:px-4 py-2 md:py-3 text-xs md:text-sm text-gray-700">{{ api_key.limit }}
+                            <td id="limit_{{ api_key.key }}" class="px-2 md:px-4 py-2 md:py-3 text-xs md:text-sm text-gray-700">{{ api_key.limit }}
                             </td>
                             <td class="px-2 md:px-4 py-2 md:py-3 text-xs md:text-sm text-gray-700">{{ api_key.reqs }}
                             </td>
